# elinks-hooks

./: LICENSE  README.md  pyproject.toml
elinks_hooks/: __init__.py  log.py  rules.py
examples/: default.yml  hackernews.yml
